--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vin</title>
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<script type="module" src="./src/main.tsx"></script>
+<script type="text/javascript">
+  MathJax = {
+    loader: { load: ['ui/lazy', 'input/asciimath', 'output/chtml'] }
+  }
+</script>
+<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
+</script>
 
 <body>
-  
+
 </body>
-<script type="module" src="./src/main.tsx"></script>
 
 </html>
