--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vin</title>
 </head>
-<script type="module" src="./src/loadMathJax.ts"></script>
+<script type="text/javascript">
+  window.MathJax = {
+    loader: { load: ['ui/lazy', 'input/asciimath', 'output/chtml'] }
+  }
+</script>
+<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
+</script>
 <script type="module" src="./src/main.tsx"></script>
 
 <body>
