--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vin</title>
+  <script src="https://cdn.jsdelivr.net/pyodide/v0.26.2/full/pyodide.js"></script>
+  <style>
+     .cm-editor {
+            height: 100%;
+            width: 100%;
+        }
+  </style>
 </head>
 <script type="text/javascript">
   window.MathJax = {
