--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vin</title>
   <script src="https://cdn.jsdelivr.net/pyodide/v0.26.2/full/pyodide.js"></script>
-  <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
-  <script src="node_modules/@xterm/xterm/lib/xterm.js"></script>
+  <link type="module" rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
+  <script type="module" src="node_modules/@xterm/xterm/lib/xterm.js"></script>
   <style>
      .cm-editor {
             height: 100%;
