Add pyodide-worker-runner package

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       -webkit-animation: spin 1s ease-in-out infinite;
     }
   </style>
-  <script defer data-domain="pyodide.org" src="https://plausible.io/js/plausible.js"></script>
+  <script defer data-domain="pyodide.org" crossorigin="anonymous" src="https://plausible.io/js/plausible.js"></script>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="https://unpkg.com/jquery.terminal@2.x.x/js/jquery.terminal.min.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/jquery.terminal@2.x.x/css/jquery.terminal.min.css" />
+  <script crossorigin="anonymous" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script crossorigin="anonymous" src="https://unpkg.com/jquery.terminal@2.x.x/js/jquery.terminal.min.js"></script>
+  <link crossorigin="anonymous" rel="stylesheet" href="https://unpkg.com/jquery.terminal@2.x.x/css/jquery.terminal.min.css" />
 
 </head>
 <script type="text/javascript">
@@ -64,7 +64,7 @@
     loader: { load: ['ui/lazy', 'input/asciimath', 'output/chtml'] }
   }
 </script>
-<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
+<script crossorigin="anonymous" type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script>
 <script type="module" src="./src/main.tsx"></script>
 
