Add cleanup for editor

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       animation: spin 1s ease-in-out infinite;
       -webkit-animation: spin 1s ease-in-out infinite;
     }
+    .selected {
+        background-color: #4a5568;
+    }
   </style>
   <script defer data-domain="pyodide.org" crossorigin="anonymous" src="https://plausible.io/js/plausible.js"></script>
 
